--- a/.guardian.yml
+++ b/.guardian.yml
@@ -1,5 +1,5 @@
-files: ./shard.yml
-run: shards install
----
 files: ./**/*.cr
-run: crystal spec
+run: crystal build ./src/readability.cr
+---
+files: ./shard.yml
+run: crystal deps
