Reverted .guardian.yml changes, so it works with 0.27

--- a/.guardian.yml
+++ b/.guardian.yml
@@ -1,5 +1,5 @@
-files: ./**/*.cr
-run: crystal build ./src/readability.cr
----
 files: ./shard.yml
-run: crystal deps
+run: shards install
+---
+files: ./**/*.cr
+run: crystal spec
